<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机安全卫士</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="setup2_des">绑定sim卡后，当再次启动手机时，若sim信息发生变化，手机卫士会自动发送报警短信给安全号码！</string>
	<string name="description">You can see everyone</string>
	<string name="operatorset_string">仅一次简单设置，以后即可便携矫正流量，时刻保持与运营商保持精确同步。</string>
	
    <string name="show_textview_rx">下载流量KB</string>
    <string name="show_textview_tx">上传流量KB</string>
    <string name="show_textview_total">流量总计KB</string>
    <string name="liuliangdanwei">M</string>
    <string name="morenliuliang">0.0</string>
    <string name="now_liuliang_total">当前流量统计</string>
    <string name="g_down_total">3g下载流量：</string>
    <string name="g_up_total">3g上传流量：</string>
    <string name="g_total">3g总计流量：</string>
    <string name="down_total">下载总流量：</string>
    <string name="up_total">上传总流量：</string>
    <string name="total_liuliang">共计总流量：</string>
    <string name="date_chose_start">选择开始时间</string>
    <string name="date_chose_over">选择结束时间</string>
    <string name="search_now"> 查询  </string>
    <string name="every_apps_data">每个程序流量详情</string>
    <string name="show_now"> 当前流量 </string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
</resources>
